--- a/egs/swbd/s5c/conf/offsets.conf
+++ b/egs/swbd/s5c/conf/offsets.conf
@@ -1,4 +1,4 @@
---cmn-offset-scale=1.0 # offset scale used to scale the covariance matrix
---num-cmn-offsets=5   # chain:4 , Xent:3 
---preserve-total-covariance=true # If true, the total covariance for random offset of spks are preserved.
+--cmn-offset-scale=0.5 # offset scale used to scale the covariance matrix
+--num-cmn-offsets=4   # chain:4 , xent:3 
+--preserve-total-covariance=false # If true, the total covariance for random offset of spks are preserved.
 --zero-mean-offsets=true
